# gitcredential-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/: renovate.json5
.github/workflows/: release-plz.yml  release.yml  rust-audit.yml  rust-clippy.yml  rustfmt.yml  typos.yml
src/: lib.rs
