[package]
name = "gitcredential"
version = "0.1.0"
edition = "2024"
description = "A library that provides an implementation of the git-credential input/output format"
repository = "https://github.com/antoniszymanski/gitcredential-rs"
license = "MPL-2.0"

[dependencies]
snafu = "0.8"
url = { version = "2", optional = true }

[features]
default = ["url"]
